[project]
name = "sequencer"
version = "0.1.0"
description = "run prompt sequences for complex tasks"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Denys Holovatyi", email = "dh@osnova.services" }
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai==1.59.6", # 52.2
    "anthropic==0.37.1",
    "huggingface-hub>=0.19.0",
    "python-dotenv>=1.0.0",
    "asyncio==3.4.3",
    "httpx==0.27.0",
]

[project.scripts]
sequencer = "sequencer.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sequencer"]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-watch==4.2.0",
    "pytest-benchmark==4.0.0",
    "pytest-html==4.1.1",
    "tox==4.11.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
